recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: reassignment to val
	if (steps=0){
                 ^